seeing if this code will fix the img using a grid, instead of just stretching out

--- a/style.css
+++ b/style.css
@@ -59,3 +59,9 @@ body {
     width: 500px;
     height: 300px;
 }
+
+.skyblockLogo {
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
+}
